Update Admin Panel to fit client's requirements, update fixed navbar, update css for other page not to overlap navbar except meeting minute and union agreement, run server sucessfully, change sidebar content

--- a/frontend/pilot-website/src/Components/AdminPortal/AdminPortal.css
+++ b/frontend/pilot-website/src/Components/AdminPortal/AdminPortal.css
@@ -1,20 +1,47 @@
-.admin-container {
+.user {
+  min-height: 80vh;
+  margin-top: 6rem;
+}
+.btn.back {
+  background-color: var(--color-main);
+  color: var(--color-white);
+  margin-left: 3rem;
+  transition:
+    background-color 0.3s ease,
+    transform 0.3s ease;
+}
+.btn.back:hover {
+  background-color: #005bb5;
+  transform: translateY(-5px);
+}
+.user-container {
+  margin: 3rem;
   background-color: #f5f5f5;
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  padding: 50px;
-  margin: 20px;
+  padding: 40px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-weight: 500;
   font-size: 24px;
   color: #333;
 }
-
-h2 {
-  margin: 0;
+.user-header {
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid var(--color-secondary-light);
 }
-
+.user-title {
+  color: #333;
+  display: flex;
+  gap: 1rem;
+  font-weight: 600;
+}
+.user-title p {
+  font-size: 26px;
+  color: darkgrey;
+  font-weight: 600;
+}
 .create-btn {
   display: flex;
   justify-content: flex-end;
@@ -22,66 +49,55 @@ h2 {
 }
 
 /* External CSS for UserTable component */
-
 .user-table-container {
   padding: 0;
   border: 1px solid #ccc;
   border-radius: 12px;
   text-align: left;
-  padding: 1rem;
 }
-
-.custom-table {
+.user-table {
   width: 100%;
   border-collapse: collapse;
 }
-
-.custom-table thead {
+.user-table thead {
   background-color: #ccc;
 }
-
-.custom-table th,
-.custom-table td {
+.user-table th,
+.user-table td {
   font-size: 1rem;
   font-weight: 500;
   padding: 0.5rem;
 }
-
 .user-link {
   color: blue;
   cursor: pointer;
   margin: 0;
   display: inline-block;
 }
-
 .delete-button,
 .edit-button {
   padding: 0;
   font-weight: bold;
 }
-
 .action-container {
   display: flex;
 }
-
-.delete-button {
+.btn.delete {
   color: #fff;
   background-color: red;
+  border-radius: 8px;
+  padding: 0.5rem 1.5rem;
+  margin-left: 1rem;
+}
+.btn.edit {
+  color: #fff;
+  background-color: blue;
   border-radius: 8px;
   padding: 0.5rem 1.5rem;
   margin: 0;
 }
 
-.edit-button {
-  color: #fff;
-  background-color: blue;
-  border-radius: 8px;
-  padding: 0.5rem 1.5rem;
-  margin-left: 1rem;
-}
-
 /* External CSS for CustomModal component */
-
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -93,7 +109,6 @@ h2 {
   justify-content: center;
   align-items: center;
 }
-
 .modal-content {
   background: #fff;
   padding: 20px;
@@ -103,7 +118,6 @@ h2 {
   width: 400px;
   max-width: 80%;
 }
-
 .close-button {
   position: absolute;
   top: 10px;
@@ -111,41 +125,85 @@ h2 {
   font-size: 1.5rem;
   cursor: pointer;
 }
-
 .modal-body {
   padding: 10px;
 }
 
 /* Style form elements */
-label {
+.modal-body.admin label {
   display: block;
   margin-bottom: 10px;
 }
-
-input,
-select {
+.modal-body.admin input,
+.modal-body.admin select {
   padding: 8px;
   margin-top: 4px;
   margin-bottom: 10px;
   display: block;
   width: 100%;
 }
-
 input {
   width: 360px !important;
 }
-
-button {
+.btn.create {
   background-color: #4caf50;
   color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
-
-button:hover {
+.btn.create:hover {
   background-color: #45a049;
 }
 
 /* Add more styles as needed */
+@media (max-width: 920px) {
+  .user {
+    margin-top: 6rem;
+  }
+  .user-container {
+    margin: 2rem;
+  }
+  .btn.back {
+    margin-left: 2rem;
+  }
+  .user-table-container {
+    overflow-x: scroll;
+  }
+  .user-title {
+    font-size: 1.5rem;
+  }
+  .user-title p {
+    font-size: 18px;
+    color: darkgrey;
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 638px) {
+  .user-container {
+    margin: 1rem;
+    padding: 20px;
+  }
+  .user-table th,
+  .user-table td {
+    font-size: 12px;
+    font-weight: 400;
+    padding: 0.5rem;
+  }
+  .user-title {
+    font-size: 16px;
+  }
+  .btn.back {
+    margin-left: 1rem;
+  }
+  .btn {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 470px) {
+  .user-container {
+    padding: 20px;
+  }
+  .user-title {
+    font-size: 14px;
+  }
+}
